Changelog for Shake

    Add profile report generator
0.2.7
    #530, require unordered-containers >= 0.1.4.3
0.2.6
    Improve the documentation code fragments (more links)
    Add support for managing finite resources
0.2.5
    Require hashable-1.1.2.3, which has a TypeRep instance
    Add Data/Typeable instances for ShakeOptions
    Add Data instance for Verbosity
0.2.4
    Include the C example source files
    Significant documentation improvements
0.2.3
    Create the shakeFiles directory if missing
0.2.2
    Allow deepseq-1.3.*
    Add a basic lint checking mode
    Remove the Dirty state entirely (was incorrect)
0.2.1
    Put diagnostics in more places
    Add a C example
0.2
    Add shakeStaunch
    Rename shakeParallel to shakeThreads
    Delete the lint support (never actually worked)
    Completely rewrite the central build algorithm
    Add verbosity Diagnostic
    Improve FilePath.normalise
    Add writeFileChanged
    Add systemOutput
    Add an Oracle module
    Add an explicit Verbosity type
    Change to lower precedence for *> etc
0.1.5
    Allow deepseq-1.2
0.1.4
    Don't export currentRule/currentStack
    Fix **>, was matching the wrong way round
    Fix FilePath normalise so it works properly on Windows
    Properly detect recursive rules, instead of looping
    Add *>> for building multiple files at once
0.1.3
    Fix a bug where a file rule could return with a lazy error
    Make sure all the files are stored in binary, not text
    Fix a pattern match error in getDirectoryFiles
0.1.2
    Add a warning in the description
0.1.1
    Significantly improved documentation
    system' now takes an initial argument for the program
0.1
    Many changes to signatures, some basic documentation
    Additional demo, to build shake itself
0.0
    Initial version, not ready for public use