@@ -1,5 +1,6 @@
 Changelog for Shake
 
+    Rename shakeDump to shakeReport
     Add profile report generator
 0.2.7
     #530, require unordered-containers >= 0.1.4.3
